利用sdl2 显示一个图片

--- a/mytest/nativelib/src/main/AndroidManifest.xml
+++ b/mytest/nativelib/src/main/AndroidManifest.xml
@@ -2,4 +2,30 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         package="com.jhf.nativelib">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <application>
+        <activity android:name=".bridge.sdl.SDLActivity"
+                android:alwaysRetainTaskState="true"
+                android:launchMode="singleInstance"
+                android:configChanges="layoutDirection|locale|orientation|uiMode|screenLayout|screenSize|smallestScreenSize|keyboard|keyboardHidden|navigation"
+                >
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+            <!-- Drop file event -->
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="*/*" />
+            </intent-filter>
+            -->
+        </activity>
+    </application>
+
 </manifest>
