--- a/mytest/app/src/main/AndroidManifest.xml
+++ b/mytest/app/src/main/AndroidManifest.xml
@@ -7,6 +7,15 @@
     <uses-permission android:name="android.permission.BLUETOOTH" /> <!-- 扫描蓝牙设备或者操作蓝牙设置 -->
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" /> <!-- 模糊定位权限，仅作用于6.0+ -->
 
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.RECORD_VIDEO" />
+    <uses-permission android:name="android.permission.IN"/>
+
 
     <application
             android:allowBackup="true"
