--- a/mytest/nativelib/src/main/AndroidManifest.xml
+++ b/mytest/nativelib/src/main/AndroidManifest.xml
@@ -6,6 +6,9 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.RECORD_VIDEO" />
+    <uses-permission android:name="android.permission.IN"/>
 
     <application>
         <activity android:name=".bridge.sdl.SDLActivity"
@@ -26,6 +29,8 @@
             </intent-filter>
             -->
         </activity>
+
+        <activity android:name=".bridge.NativeEntranceTestActivity"/>
     </application>
 
 </manifest>
