实现audiotrack音频播放

--- a/mytest/nativelib/src/main/jni/CMakeLists.txt
+++ b/mytest/nativelib/src/main/jni/CMakeLists.txt
@@ -10,7 +10,7 @@ include_directories(src src/utils)
 include_directories(src ffmpeg/include)
 
 
-set(LIB_SRC src/NativelibMain.cpp
+set(LIB_SRC src/AndroidJni.cpp
         src/FirstTest.cpp
         src/utils/LogUtils.c
         )
