--- a/mytest/nativelib/src/main/AndroidManifest.xml
+++ b/mytest/nativelib/src/main/AndroidManifest.xml
@@ -30,7 +30,9 @@
             -->
         </activity>
 
-        <activity android:name=".bridge.NativeEntranceTestActivity"/>
+        <activity android:name=".bridge.NativeEntranceTestActivity"
+                android:screenOrientation="portrait"
+                />
     </application>
 
 </manifest>
