增加ffmpeg example 示例 增加视频录制demo

--- a/mytest/nativelib/src/main/AndroidManifest.xml
+++ b/mytest/nativelib/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
         <activity android:name=".bridge.NativeEntranceTestActivity"
                 android:screenOrientation="portrait"
                 />
+
+        <activity android:name=".bridge.NativeExampleActivity"/>
     </application>
 
 </manifest>
