--- a/mytest/app/build.gradle
+++ b/mytest/app/build.gradle
@@ -1,5 +1,13 @@
 apply plugin: 'com.android.application'
 
+def testPropertyParams = project.findProperty("testPropertyParams");
+println "testPropertyParams :" + testPropertyParams;
+
+def testSystemParams = System.getenv();
+println "testSystemParams :" + testSystemParams;
+
+//./gradlew clean -PtestPropertyParams=123 -DtestSystemParams=true
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -18,17 +26,39 @@ android {
         }
     }
 
+    signingConfigs{
+        zte {
+            keyAlias 'androidkey'
+            keyPassword 'android'
+            storeFile file('zte_android.keystore')
+            storePassword 'android'
+        }
+    }
+
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+
     }
+
+//    flavorDimensions "mode"
+//    productFlavors{
+//        zte{
+//            dimension "mode"
+//            signingConfig signingConfigs.zte
+//        }
+//    }
+
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -37,4 +67,9 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
 
     implementation project(":nativelib")
+
+    //banner
+    compile 'com.github.rtugeek:materialbanner:1.0.2'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
+
 }
