--- a/mytest/app/src/main/AndroidManifest.xml
+++ b/mytest/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-feature android:name="android.hardware.location.gps" />
+
+
     <uses-permission android:name="android.permission.BLUETOOTH" /> <!-- 扫描蓝牙设备或者操作蓝牙设置 -->
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" /> <!-- 模糊定位权限，仅作用于6.0+ -->
 
@@ -16,26 +19,32 @@
     <uses-permission android:name="android.permission.RECORD_VIDEO" />
     <uses-permission android:name="android.permission.IN"/>
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
 
     <application
-            android:allowBackup="true"
-            android:name=".app.DemoAPP"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme"
-            android:extractNativeLibs="true"
-            >
+        android:allowBackup="true"
+        android:name=".app.DemoAPP"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        android:extractNativeLibs="true"
+        >
 
-            <activity android:name=".activity.MainActivity"
-                    android:screenOrientation="portrait"
-                    >
-                <intent-filter>
-                    <category android:name="android.intent.category.LAUNCHER"/>
-                    <action android:name="android.intent.action.MAIN"/>
-                </intent-filter>
-            </activity>
+        <activity android:name=".activity.MainActivity"
+                android:screenOrientation="portrait"
+                >
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN"/>
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".activity.MediaRecorderActivity"/>
+
+        <activity android:name=".activity.BannerActivity"/>
     </application>
 
 </manifest>
